fix: fix animation and styles for sources scrollbar

--- a/news-api/src/components/view/sources/sources.css
+++ b/news-api/src/components/view/sources/sources.css
@@ -88,7 +88,7 @@ input[type=range]::-ms-track {
 
 input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
-    height: 8px;
+    height: 10px;
     background: transparent;
     border-radius: 5px;
     cursor: pointer;
@@ -98,7 +98,7 @@ input[type=range]::-webkit-slider-runnable-track {
 
 input[type=range]::-moz-range-track {
     width: 100%;
-    height: 8px;
+    height: 10px;
     background: transparent;
     border-radius: 5px;
     cursor: pointer;
@@ -106,16 +106,17 @@ input[type=range]::-moz-range-track {
 
 input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
-    width: 10%;
+    width: 25px;
     height: 100%;
     border-radius: 5px;
     background: #ffffff;
     cursor: pointer;
+    z-index: 1;
 }
 
 input[type=range]::-moz-range-thumb {
     -webkit-appearance: none;
-    width: 10%;
+    width: 25px;
     height: 100%;
     border-radius: 5px;
     background: #ffffff;
